[sync] SYNC_AUTH_ERROR in logs when running sync_integration_tests

Switch to a DVLOG(1) and add a bit more detail to the message.

BUG=687671

R=pavely@chromium.org

Review-Url: https://codereview.chromium.org/2681393002
Cr-Commit-Position: refs/heads/master@{#449422}

Former-commit-id: 27be9c0b8336fbddbcf95bebe2c840ba503af12b