components/sync/engine_impl/net/server_connection_manager.cc
@@ -266,7 +266,8 @@ bool ServerConnectionManager::PostBufferToPath(PostBufferParams* params,
   if (auth_token.empty() || auth_token == "credentials_lost") {
     params->response.server_status = HttpResponse::SYNC_AUTH_ERROR;
     // Print a log to distinguish this "known failure" from others.
-    LOG(WARNING) << "ServerConnectionManager forcing SYNC_AUTH_ERROR";
+    DVLOG(1) << "ServerConnectionManager forcing SYNC_AUTH_ERROR due to missing"
+                " auth token";
     return false;
   }
 
